# soft

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
agents/: depot.lex  depot.spec  llm_driver.lex  pv.lex  tms.lex  vehicle.lex  vehicle.spec
crates/soft-a2a/: Cargo.toml  README.md
crates/soft-a2a/src/: client.rs  error.rs  executor.rs  lib.rs  server.rs  wire.rs
crates/soft-a2a/tests/: integration.rs  metrics_route.rs  round_trip.rs  shutdown_auth.rs
crates/soft-agent/: Cargo.toml  README.md
crates/soft-agent/examples/: depot.rs  multi_depot.rs  single_lex.rs
crates/soft-agent/examples/lex/: grid_budget.spec  multi_depot_depot.lex  multi_depot_host.lex  multi_depot_tms.lex  multi_depot_vehicle.lex  single_vehicle.lex  soc_reserve.spec
crates/soft-agent/src/: action.rs  agent.rs  bindings.rs  dsl_preamble.lex  effect.rs  error.rs  executor.rs  gate.rs  lex_dsl.rs  lex_host.rs  lib.rs  mailbox.rs  metrics.rs  replay.rs  router.rs  runner.rs  trace.rs
crates/soft-agent/tests/: budget_probe.rs  cross_depot.rs  deploy_specs.rs  failure_modes.rs  gate_traced.rs  gate_unit.rs  lex_dsl.rs  lex_handler.rs  lex_host.rs  multi_agent.rs  phase1_specs.rs  pv_update.rs  replay.rs  runner_flow.rs  skeleton.rs  stateful_lex.rs  tick.rs
crates/soft-agent/tests/fixtures/: cross_depot_depot_denies.lex  cross_depot_depot_grants.lex  cross_depot_tms.lex  cross_depot_vehicle.lex  multi_agent_depot.lex  multi_agent_vehicle.lex
crates/soft-runner/: Cargo.toml
crates/soft-runner/src/: anthropic.rs  main.rs
crates/soft-trace-viewer/: Cargo.toml
crates/soft-trace-viewer/src/: index.html  main.rs
crates/soft-trace-viewer/tests/: smoke.rs
deploy/: Procfile  README.md  run-local.sh
docs/: lex-lang-0.3-upgrade.md  lex-lang-0.5-upgrade.md  proposal.md
docs/architecture/: lex-vs-rust.md
docs/crates/: soft-a2a.md  soft-agent.md
docs/lex-lang/: build-report.md  expectations.md  scope-decision.md  v0.2.2-followup.md
docs/lex-lang/issues/: 01-lex-agent-crate.md  02-effect-tags.md  03-mcp-tool-registry-wrapper.md  04-a2a-endpoints.md  05-spec-checker-runtime-gate.md  06-lex-trace-vcs-integration.md  184-effect-tags.md  185-mcp-tool-registry-wrapper.md  186-spec-checker-runtime-gate.md  187-lex-trace-vcs-integration.md  README.md
docs/lex-lang/issues/drafts/: parser-underscore-handling.md  spec-checker-tracer-hook.md
examples/phase1/: README.md  depot.lex  messages.lex  tms.lex  vehicle.lex
examples/phase1/specs/: grid_budget.spec  soc_reserve.spec
mocks/: README.md  local_planner.py  ocpp.py  optimizer.py  telemetry.py  tms_db.py
tests/: requirements.txt  test_mocks.py
