[workspace]
resolver = "2"
members = [
    "crates/soft-agent",
    "crates/soft-a2a",
]

[workspace.package]
edition = "2021"
license = "EUPL-1.2"
rust-version = "1.80"
authors = ["soft contributors"]
repository = "https://github.com/alpibrusl/soft"

[workspace.dependencies]
# lex-lang v0.2.0 (published 2026-05-06; closes #184–#187 via PRs #189–#192).
# SemVer-pinned to "0.2"; breaking changes upstream bump to 0.3+.
lex-syntax   = "0.2"
lex-ast      = "0.2"
lex-types    = "0.2"
lex-bytecode = "0.2"
lex-runtime  = "0.2"
lex-store    = "0.2"
lex-trace    = "0.2"
lex-api      = "0.2"
spec-checker = "0.2"

indexmap   = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
