[workspace]
resolver = "2"
members = [
    "crates/soft-agent",
    "crates/soft-a2a",
    "crates/soft-runner",
    "crates/soft-trace-viewer",
]

[workspace.package]
edition = "2021"
license = "EUPL-1.2"
rust-version = "1.80"
authors = ["soft contributors"]
repository = "https://github.com/alpibrusl/soft"

[workspace.dependencies]
# lex-lang v0.3.0 (published 2026-05-08; closes #206–#209, #216–#219, #221–#225,
# #227, #240 via the 0.3 train). SemVer-pinned to "0.3"; the breaking changes
# (`EffectSet.concrete` shape, `Value::Closure { body_hash }`) don't affect
# soft-agent — see docs/lex-lang-0.3-upgrade.md for the audit.
lex-syntax   = "0.3"
lex-ast      = "0.3"
lex-types    = "0.3"
lex-bytecode = "0.3"
lex-runtime  = "0.3"
lex-store    = "0.3"
lex-trace    = "0.3"
lex-api      = "0.3"
spec-checker = "0.3"

indexmap   = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http  = "0.12"
ureq       = { version = "2", features = ["json"] }

[profile.release]
lto = "thin"
codegen-units = 1
