[workspace]
resolver = "2"
members = [
    "crates/soft-agent",
    "crates/soft-a2a",
    "crates/soft-runner",
    "crates/soft-trace-viewer",
]

[workspace.package]
edition = "2021"
license = "EUPL-1.2"
rust-version = "1.80"
authors = ["soft contributors"]
repository = "https://github.com/alpibrusl/soft"

[workspace.dependencies]
# lex-lang v0.5.0 (published 2026-05-09). SemVer-pinned to "0.5".
# 0.4 + 0.5 are additive at every API surface soft consumes — the
# two breaking changes called out in the upstream changelogs
# (`OperationFormat` versioning rotating OpIds, `rand 0.10` /
# `getrandom 0.4` trait imports) miss soft entirely. See
# docs/lex-lang-0.5-upgrade.md for the audit and follow-ups.
lex-syntax   = "0.5"
lex-ast      = "0.5"
lex-types    = "0.5"
lex-bytecode = "0.5"
lex-runtime  = "0.5"
lex-store    = "0.5"
lex-trace    = "0.5"
lex-api      = "0.5"
spec-checker = "0.5"

indexmap   = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http  = "0.12"
ureq       = { version = "2", features = ["json"] }

[profile.release]
lto = "thin"
codegen-units = 1
