[package]
name = "soft-a2a"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "A2A protocol surface for soft agents. Pins one A2A version; uses lex-api as a library."
publish = false

[dependencies]
# lex-lang v0.2.0 — uses lex-api as a library; soft-agent for shared types.
lex-api    = { workspace = true }
soft-agent = { path = "../soft-agent" }

serde      = { workspace = true }
serde_json = { workspace = true }
