[package]
name = "soft-agent"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Autonomous agent runtime for the soft project. Sits on lex-lang primitives."
publish = false

[dependencies]
# Awaiting lex-lang issues:
# - #184 effect tags                 — https://github.com/alpibrusl/lex-lang/issues/184
# - #185 MCP wrapper                 — https://github.com/alpibrusl/lex-lang/issues/185
# - #186 spec-checker runtime gate   — https://github.com/alpibrusl/lex-lang/issues/186
# - #187 lex-trace ↔ lex-vcs         — https://github.com/alpibrusl/lex-lang/issues/187
#
# Once landed:
# lex-types   = { workspace = true }
# lex-runtime = { workspace = true }
# lex-trace   = { workspace = true }
# lex-vcs     = { workspace = true }
