[package]
name = "soft-agent"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Autonomous agent runtime for the soft project. Sits on lex-lang primitives."
publish = false

[dependencies]
# lex-lang v0.2.0 — primitives we build on.
lex-bytecode = { workspace = true }   # Vm, Tracer, Value (spec bindings)
lex-runtime  = { workspace = true }   # capability policy, effect handler
lex-store    = { workspace = true }   # Store::save_trace
lex-trace    = { workspace = true }   # Recorder, RunId
spec-checker = { workspace = true }   # evaluate_gate, GateVerdict

indexmap   = { workspace = true }
serde_json = { workspace = true }
